--- a/service.html
+++ b/service.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dservice on main branch</title>
   </head>
   <body>
-    <h1>Service</h1>
+    <h1>Service on main</h1>
   </body>
 </html>
