--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document changes second changes</title>
+    <title>Document changes second changes third changes</title>
   </head>
   <body>
-    <h1>Home changes second changes</h1>
+    <h1>Home changes second changes third changes</h1>
   </body>
 </html>
