--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About footer branche</title>
   </head>
   <body>
-    <h1>ABOUT</h1>
+    <h1>ABOUT ft/footer created</h1>
   </body>
 </html>
