--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document changes second changes third changes</title>
   </head>
   <body>
-    <h1>Home changes second changes third changes</h1>
+    <h1>Git Practical Exercises</h1>
   </body>
 </html>
